@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.99999960';
+our $VERSION='0.99999961';
 
 
 use 5.005;
